# LLM-ANALYSIS-QUIZ

./: .env.example  .gitignore  README.md  agent.py  config.py  pyproject.toml  run_reevals.py  server.py  simple_server.py  test_browser.py
core/: __init__.py  converter.py  runner.py  scraper.py  submitter.py
helpers/: __init__.py  audio.py  bs64_encoding.py  code.py  file.py  parser.py  pdf.py  sql.py  unzip_zip.py  web.py
llm/: __init__.py  client.py  prompts.py
logs/: __init__.py  logger.py
tools/core/: __init__.py  browser.py  get_data.py  prompt_builder.py  question_generator.py  question_solver.py
tools/helper/: __init__.py  api_caller.py  audio_to_text.py  chart_generator.py  code_executor.py  code_generator.py  data_reader.py  image_to_text.py  paths.py  pdf_reader.py  scraper.py
